# chess-engine-interface

./: .gitattributes  README.md  requirements.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .gitignore  Dockerfile  db.sqlite3  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
backend/api/: consumers.py  models.py  mods.py  routing.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_match_blacks_player_alter_match_end_time_and_more.py  0003_remove_moves_order_moves_move_moves_time.py
backend/backend/: asgi.py  settings.py  urls.py
backend/calls/: create_user_call.py  fen_call.py  info.py  info_call.py  login.py  update.py
backend/engines/Berserk-12_Linux_x64/: chessengeria.eu.url
backend/engines/arasan/: arasanx-64
backend/engines/critter/: critter
backend/engines/ethereal/: Ethereal
backend/engines/komodo-13_201fd6/OSX/: komodo-13.02-64-bmi2-osx
backend/engines/lc0/: lc0
backend/engines/slowchess/SlowChess-Linux-2.9/: EndgameBitbases.sbb  NeuralNets.snn  TestBook.scb  slow64_linux_avx2  slow64_linux_sse
backend/engines/stockfish/stockfish_13_linux_x64/__MACOSX/stockfish_13_linux_x64/: ._stockfish_13_linux_x64
backend/nginx/: nginx.conf  nginx.dev.conf
backend/scripts/: docker-deploy.sh
backend/users/: permissions.py  serializers.py  urls.py  views.py
frontend/: .firebaserc  ad.js  firebase.json  index.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/public/: index.html  (+1 more)
(+131 files in other folders)
